# mcp-servers

./: README.md  pyproject.toml
.github/workflows/: release.yml
examples/mcp-server-example/: pyproject.toml
examples/mcp-server-example/src/mcp_server_example/: server.py  settings.py
libs/mcp-server-lib/: pyproject.toml
libs/mcp-server-lib/src/mcp_server_lib/: __init__.py  browser.py
scripts/: release.py
src/mcp-server-lib/: pyproject.toml
src/mcp-server-lib/src/mcp_server_lib/: __init__.py  browser.py
src/mcp-server-qq-music/: README.md  pyproject.toml
src/mcp-server-qq-music/src/mcp_server_qq_music/: __init__.py  browser.py  client.py  server.py  settings.py
src/mcp-server-rednote/: README.md  pyproject.toml
src/mcp-server-rednote/src/mcp_server_rednote/: __init__.py  browser.py  rednote.py  server.py  settings.py
