[project]
name = "mcp-server-example"
version = "0.1.0"
description = "Example MCP Server"
readme = "README.md"
authors = [{ name = "saltfishpr", email = "saltfishpr@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.51.0",
    "pydantic>=2.0.0",
    "mcp-server-lib",
    "fastmcp>=2.2.1",
]

[project.scripts]
mcp-server-example = "mcp_server_example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
