[project]
name = "mcp-server-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "saltfishpr", email = "saltfishpr@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["playwright>=1.51.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
