[project]
name = "mcp-server-rednote"
version = "0.1.0"
description = "RedNote MCP Server"
readme = "README.md"
authors = [{ name = "saltfishpr", email = "saltfishpr@gmail.com" }]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pillow>=11.2.1",
    "playwright>=1.51.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-rednote = "mcp_server_rednote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "ruff>=0.11.6",
]
