[project]
name = "mcp-server-rednote"
version = "0.1.1"
description = "RedNote MCP Server"
readme = "README.md"
authors = [{ name = "saltfishpr", email = "saltfishpr@gmail.com" }]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.51.0",
    "mcp-server-lib",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-rednote = "mcp_server_rednote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
